# JCLib

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  jclibdoxy  jclibtest.cmake  utility.cmake
.github/workflows/: clang_debug.yml  clang_release.yml  gcc_debug.yml  gcc_release.yml  main.yml
codegen/: codegen.lua  codegen.sh  readme.txt
codegen/feature_gen/: feature.h  feature_gen.lua  feature_list.lua  generate.sh
codegen/lua/: luaenv.lua  luaenv.sh
codegen/lua/lib/: jclib-cli.lua  jclib-format.lua  reeee.lua
config/: CMakeLists.txt
config/in/: algorithm.cmake  algorithm.in.h  version.cmake  version.in.h
include/jclib/: algorithm.h  array_view.h  compiler.h  concepts.h  config.h  either.h  exception.h  feature.h  fmtstream.h  functional.h  functor.h  guard.h  iterator.h  maybe.h  memory.h  optional.h  ranges.h  singleton.h  span.h  thread.h  time.h  timer.h  to.h  type.h  type_traits.h  unique.h
test_support/: CMakeLists.txt
test_support/include/: jclib-test.hpp
tests/: CMakeLists.txt  jclibtest.cmake
tests/algorithm/: test.cpp
tests/array_view/: CMakeLists.txt  array_view_test.cpp
tests/concepts/: CMakeLists.txt  test.cpp
tests/conv/: test.cpp
tests/either/: CMakeLists.txt  test.cpp
tests/feature/: test.cpp
tests/fmtstream/: test.cpp
tests/format/: test.cpp
tests/functional/: test.cpp
tests/functor/: CMakeLists.txt  test.cpp
tests/guard/: derived.cmake  derived.cpp  stateful.cmake  stateful.cpp  stateless.cmake  stateless.cpp  stateless_old.cpp  test.cpp
tests/iterator/: test.cpp
tests/maybe/: test.cpp
tests/memory/: CMakeLists.txt  borrow_ptr.cmake  borrow_ptr.cpp  destroy_at.cmake  destroy_at.cpp  memory_test.cpp  reference_ptr.cmake  reference_ptr.cpp  test.cpp
tests/optional/: test.cpp
tests/ranges/: ranges.cmake  ranges.cpp  test.cpp  type_traits.cmake  type_traits.cpp
tests/singleton/: test.cpp
tests/span/: span.cmake  span.cpp  test.cpp
tests/string_view/: test.cpp
tests/time/: CMakeLists.txt  test.cpp  time_test.cpp
tests/timer/: CMakeLists.txt  test.cpp  timer.cpp
tests/type/: no_copy_move.cmake  no_copy_or_move.cpp  null.cmake  null.cpp
tests/type_traits/: cpp14fold.cmake  fold.cmake  function_traits.cmake  function_traits.cpp  inheritance.cmake  inheritance.cpp  test.cpp
tests/unique/: unique_value.cmake  unique_value.cpp
