macro(SUBDIRLIST result curdir)
	file(GLOB children RELATIVE ${curdir} ${curdir}/*)
	set(dirlist "")
	foreach(child ${children})
		if(IS_DIRECTORY ${curdir}/${child})
			list(APPEND dirlist ${child})
		endif()
	endforeach()
	set(${result} ${dirlist})
endmacro()

set(test_folders )
SUBDIRLIST(test_folders ${CMAKE_CURRENT_SOURCE_DIR})

set(test_counter 0)
foreach(test_folder_path IN LISTS test_folders)
	##add_subdirectory(${test_folder_path})
	JCLIB_ADD_TEST(${test_folder_path} "${CMAKE_CURRENT_SOURCE_DIR}/${test_folder_path}/test.cpp")
	MATH(EXPR test_counter "${test_counter}+1")
endforeach()
